--- a/_posts/2013-08-10-raising.md
+++ b/_posts/2013-08-10-raising.md
@@ -14,33 +14,37 @@ It was then that I realized what message the waiter had for me. We focus so much
 
 Digging deeper into the psychology texts I found out that most self criticizing habits are formed within the first eight years of life -especially between 2-8 years. Physiologists explain that this is the period when all our negatives are quickly pointed out by adults. To quote Peggy Jenkins (from 'The Joyful child'): "Overheard criticisms, put-downs, misinterpretations of parental anger or scolding can all chip away at the child's self worth and leave him feeling joyless and worthless."
 
-It becomes better after 10 years, because increasingly available and important PEER evaluation is far more appreciative and less critical. But the damage is already done and while the child may not get so many external put downs, the negative self talk is enough. The focus on imperfection is enough to stop the child from dreaming big enough, aiming high enough and trying enough! Its enough to weaken our overall self esteem. And the vicious thinking assures that every failure gets added as proof to our over-critical self's repertoire. Here are five parenting tendencies that are chief in doing so. Check them out and see which you are doing and which you need to avoid - at all costs:
+It becomes better after 10 years, because increasingly available and important PEER evaluation is far more appreciative and less critical. But the damage is already done and while the child may not get so many external put downs, the negative self talk is enough. The focus on imperfection is enough to stop the child from dreaming big enough, aiming high enough and trying enough! Its enough to weaken our overall self esteem. And the vicious thinking assures that every failure gets added as proof to our over-critical self's repertoire. Here are five parenting tendencies that are chief in doing so. Check them out and see which you are doing and which you need to avoid - at all costs
 
 1. no, No, NO!
 
 If what the child gets during the day is a staple diet of, "Don't touch this, don't eat this, don't waste your time, don't do like this, no pulling my hair, no playing with your hair, don't run, no jumping on sofa, don't eat fast, don't eat so slowly..
 
-When our actions get negated, our thoughts get negated and we start feeling that "I am not worthy (and capable) of thinking 'right'". To the extent that often children will do some actions just to see how soon they are stopped from doing so. They have learnt what gets their parents attention. But the real damage is far deeper. Alternate approach: Try saying YES. Rather than saying what you want the child NOT to do, try saying what you want the child to do. Eg: Instead of "don't waste your time", say "its nice to focus on your work". Instead of "No, no pulling hair", say "Yes, rub my cheeks, Ahaaaa" etc.
+When our actions get negated, our thoughts get negated and we start feeling that "I am not worthy (and capable) of thinking 'right'". To the extent that often children will do some actions just to see how soon they are stopped from doing so. They have learnt what gets their parents attention. But the real damage is far deeper. 
+
+Alternate approach: Try saying YES. Rather than saying what you want the child NOT to do, try saying what you want the child to do. Eg: Instead of "don't waste your time", say "its nice to focus on your work". Instead of "No, no pulling hair", say "Yes, rub my cheeks, Ahaaaa" etc.
 
 2. Comparison
 
-"Look at how she is eating properly; your sister has already finished her home work; your friend is playing and having fun, why can't you? See they are all going to school smilingly"; and so on. What you think and feel is less important, what is socially appropriate should always be done! - While this seems to be least effective kind of motivation, I guess as parents we run short of ideas and just tend to use it so frequently that it becomes the bases of all my decision in life. Right from I too want that kind of cycle to when the adult grows and wants a car like the neighbor's big car! But the damage is more than materialistic- it’s when I feel I am incapable or not worthy just because somebody else seems to be more capable and worthy - then we live a life of low self esteem. Then we also do not achieve much because we think we're unworthy of achieving much! Alternate approach: Understand motivation. Focus on progress of your child rather then comparative performance.
+"Look at how she is eating properly; your sister has already finished her home work; your friend is playing and having fun, why can't you? See they are all going to school smilingly" and so on. What you think and feel is less important, what is socially appropriate should always be done! - While this seems to be least effective kind of motivation, I guess as parents we run short of ideas and just tend to use it so frequently that it becomes the basis of all decisions in life. Right from I too want that kind of cycle to when the adult grows and wants a car like the neighbor's big car! But the damage is more than materialistic- it’s when I feel I am incapable or not worthy just because somebody else seems to be more capable and worthy - then we live a life of low self esteem. Then we also do not achieve much because we think we're unworthy of achieving much! 
+
+Alternate approach - Understand motivation. Focus on progress of your child rather than comparative performance.
 
 3. Blame
 
-I remember when I had got that sizzler in the restaurant with half cooked tomato the first thought that came to my mind was "these guys are horrible". Now I realize - the guys were not horrible, only the tomato was. Haven't each one of us done some things wrong - does that make us horrible or less than what we are? Maybe a child's action is not appropriate, but that doesn't make the child "inappropriate". Somehow we have learned to vent out our anger not by expressing our displeasure over the action, but by blaming the other person. And since it's the other person's mistake we feel justified in doing so. You are irritating, you are disorganized, you are lazy, you are impulsive, you are careless, and you are dishonest. All this doesn't leave much of self worth?
+I remember when I had got that sizzler in the restaurant with half cooked tomato the first thought that came to my mind was "these guys are horrible". Now I realize - the guys were not horrible, only the tomato was. Haven't each one of us done some things wrong - does that make us horrible or less than what we are? Maybe a child's action is not appropriate, but that doesn't make the child "inappropriate". Somehow we have learnt to vent out our anger not by expressing our displeasure over the action, but by blaming the other person. And since it's the other person's mistake, we feel justified in doing so. You are irritating, you are disorganized, you are lazy, you are impulsive, you are careless, and you are dishonest. All this doesn't leave much of self worth?
 
-Alternate approach: When angry or upset, instead of shouting or hitting, try expressing your feelings by saying "I am upset that you told a lie". Then explicitly state what behavior you disapprove of, "I do not like lies being told" Follow that by clearly stating your expectations, "I trust you and I expect you to tell me the truth always"
+Alternate approach - When angry or upset, instead of shouting or hitting, try expressing your feelings by saying "I am upset that you told a lie". Then explicitly state what behavior you disapprove of, "I do not like lies being told". Follow that by clearly stating your expectations, "I trust you and I expect you to tell me the truth always"
 
 4. Should
 
 A large part of our critical self talk emerges from this thought process called SHOULD. "I should look good, I should answer right, I should be smart, I should not make a fool of myself by asking or trying" and so on. This happens because as a child our parents are constantly telling us what SHOULD be done. This comes as a decree, a command. Hence it needs to be obeyed at all cost.
 
-So we say to the child, "You should finish your homework fast". Now just assume that the child does not want to do so, or is not able to do so:   either way, the child will keep saying inside himself, "I should, I should.."
+So we say to the child, "You should finish your homework fast". Now just assume that the child does not want to do so, or is not able to do so - either way, the child will keep saying inside himself, "I should, I should.."
 
-Do a little exercise right now. Close your eyes and say to yourself (in atone or manner similar to how you say to yourself or to your children) "I should, .. I should, .. I should, .. I should, .. I should, ..". Check how does this makes you feel? Check if it is enlarging or diminishing?
+Do a little exercise right now. Close your eyes and say to yourself (in a tone or manner similar to how you say to yourself or to your children) "I should, .. I should, .. I should, .. I should, .. I should, ..". Check how does this makes you feel? Check if it is enlarging or diminishing?
 
-Alternate approach: Replace all your SHOULDs with COULDs. "You could finish your homework fast. You could say thank you to uncle" etc.
+Alternate approac Replace all your SHOULDs with COULDs. "You could finish your homework fast. You could say thank you to uncle" etc.
 
 5. Decisions
 
