--- a/_posts/2013-08-10-raising.md
+++ b/_posts/2013-08-10-raising.md
@@ -28,13 +28,13 @@ Alternate approach: Try saying YES. Rather than saying what you want the child N
 
 "Look at how she is eating properly; your sister has already finished her home work; your friend is playing and having fun, why can't you? See they are all going to school smilingly" and so on. What you think and feel is less important, what is socially appropriate should always be done! - While this seems to be least effective kind of motivation, I guess as parents we run short of ideas and just tend to use it so frequently that it becomes the basis of all decisions in life. Right from I too want that kind of cycle to when the adult grows and wants a car like the neighbor's big car! But the damage is more than materialistic- it’s when I feel I am incapable or not worthy just because somebody else seems to be more capable and worthy - then we live a life of low self esteem. Then we also do not achieve much because we think we're unworthy of achieving much! 
 
-Alternate approach - Understand motivation. Focus on progress of your child rather than comparative performance.
+Alternate approach: Understand motivation. Focus on progress of your child rather than comparative performance.
 
 3. Blame
 
 I remember when I had got that sizzler in the restaurant with half cooked tomato the first thought that came to my mind was "these guys are horrible". Now I realize - the guys were not horrible, only the tomato was. Haven't each one of us done some things wrong - does that make us horrible or less than what we are? Maybe a child's action is not appropriate, but that doesn't make the child "inappropriate". Somehow we have learnt to vent out our anger not by expressing our displeasure over the action, but by blaming the other person. And since it's the other person's mistake, we feel justified in doing so. You are irritating, you are disorganized, you are lazy, you are impulsive, you are careless, and you are dishonest. All this doesn't leave much of self worth?
 
-Alternate approach - When angry or upset, instead of shouting or hitting, try expressing your feelings by saying "I am upset that you told a lie". Then explicitly state what behavior you disapprove of, "I do not like lies being told". Follow that by clearly stating your expectations, "I trust you and I expect you to tell me the truth always"
+Alternate approach: When angry or upset, instead of shouting or hitting, try expressing your feelings by saying "I am upset that you told a lie". Then explicitly state what behavior you disapprove of, "I do not like lies being told". Follow that by clearly stating your expectations, "I trust you and I expect you to tell me the truth always"
 
 4. Should
 
@@ -44,11 +44,11 @@ So we say to the child, "You should finish your homework fast". Now just assume 
 
 Do a little exercise right now. Close your eyes and say to yourself (in a tone or manner similar to how you say to yourself or to your children) "I should, .. I should, .. I should, .. I should, .. I should, ..". Check how does this makes you feel? Check if it is enlarging or diminishing?
 
-Alternate approac Replace all your SHOULDs with COULDs. "You could finish your homework fast. You could say thank you to uncle" etc.
+Alternate approach: Replace all your SHOULDs with COULDs. "You could finish your homework fast. You could say thank you to uncle" etc.
 
 5. Decisions
 
-One of the key sign of low self-esteem is consistent indecisiveness or the inability to take a balanced decision - result is either inaction or impulsiveness This often stems from the fact that most of our childhood decisions are taken by parents and many a times over-ridden by parents. Do you decide how much your child should eat? If your daughter chooses a dress for a party - do you over ride her decision - especially with a "I say so". We seem to have our own operating parameters, while child is ignorant of them, leaving the child in a lurch, she not really understanding what's wrong with her decision making.
+One of the key sign of low self-esteem is consistent indecisiveness or the inability to take a balanced decision - result is either inaction or impulsiveness. This often stems from the fact that most of our childhood decisions are taken by parents and many a times over-ridden by parents. Do you decide how much your child should eat? If your daughter chooses a dress for a party - do you override her decision - especially with a "I say so". We seem to have our own operating parameters. Our child is ignorant of these parameters, leaving the child in a lurch, she does not really understand what's wrong with her decision making.
 
 A typical scene in a restaurant is when the child is asked what will you eat and when he expresses his decision it is overridden due to some reason.
 
