--- a/_posts/2013-08-10-pursuit.md
+++ b/_posts/2013-08-10-pursuit.md
@@ -3,11 +3,12 @@ layout: chapter
 title: In Pursuit of Happiness
 permalink: pursuit
 catgory: values
+published: true
 ---
 
 The speakers in my car blared:
 
-"Haton me ghari 'Rado' ki, perfume 'Gucci' wala,
+"Hathon me ghari 'Rado' ki, perfume 'Gucci' wala,
 But Pappu can't dance sala"
 
 The essence of these lines (and the whole song) is indeed profound:
