--- a/_posts/2013-08-10-pursuit.md
+++ b/_posts/2013-08-10-pursuit.md
@@ -19,9 +19,9 @@ The song gains special significance, keeping in mind that umpteen parents have e
 
 But according to us - we cannot 'get' happiness. We can only 'be' happy. That's all. Wherever we are, whatever we have, whoever we become.
 
-I am reminded of cute story i read somewhere: A little kitten is going round and round in circles, trying to catch its tail. Mumma cat inquires her of this behavior. The kitten replies, "I have figured out that, for a cat, happiness lies in its tail - so I'm trying to 'catch' happiness".
+I am reminded of cute story i read somewhere: A little kitten is going round and round in circles, trying to catch its tail. Mumma cat inquires about this behavior. The kitten replies, "I have figured out that, for a cat, happiness lies in its tail - so I'm trying to 'catch' happiness".
 
-The wise mumma cat smiled and replied, "True my dear, for cat happiness lies in its tail, but if we go after it, we are never able to 'catch' it. However, if we go about our business, the tail and happiness simply follows us!
+The wise mumma cat smiled and replied, "True my dear, for a cat happiness lies in its tail, but if we go after it, we are never able to 'catch' it. However, if we go about our business, the tail and happiness simply follows us!
 
 Given the presumption that we cannot 'get' happiness; that we can only 'be' happy, one wonders why -
 
@@ -57,4 +57,4 @@ Further, how, on a daily basis do I show and share my happiness? Am I unhappy wi
 
 Q4: What role does emotional competence play in me being happy or atleast being in harmony, at peace? If this is important, then how am I helping and guiding my child to be emotionally more competent? Am I emotionally competent? How?
 
-Q5: What will it do to my child, (and to me) if i were to relieve my child (and even myself) the 'burden' to be happy? What will it do to my child, if we were to follow the advice of the wise mumma cat???
+Q5: What will it do to my child, (and to me) if i were to relieve my child (and even myself), the 'burden' to be happy? What will it do to my child, if we were to follow the advice of the wise mumma cat???
