--- a/_posts/2013-08-10-year.md
+++ b/_posts/2013-08-10-year.md
@@ -3,9 +3,10 @@ layout: chapter
 title: Parenting Year of Play
 permalink: year
 category: parent
+published: true
 ---
 
-Lets make a resolution for whole of 2011 - I will Play.
+Lets make a lifetime resolution - I will Play.
 
 Having children means spending a lot of time on them. We feed them, get them ready for school, buy presents, take them to the dentist, supervise their homework, all of that and more.
 
