--- a/_posts/2013-08-01-peers.md
+++ b/_posts/2013-08-01-peers.md
@@ -1,9 +1,10 @@
 ---
 layout: chapter
-title: Peers - Fear or Dear
+title: "Peers - Fear or Dear"
 permalink: peers
 category: feelings
---- 
+published: true
+---
 
 I have a crisp 100 rupee note, do you want it?
 
@@ -42,6 +43,6 @@ Children are quite vulnerable to teasing, bullying, etc., by peers.
 
 While this is a test of self-esteem built at home, this pressure can sometimes start eroding it. Avoid panic, protecting and pulling your child out of it. Instead, first make her understand why others might be doing so and together work out a strategy to cope up with it. Base this strategy on your child's strengths. I used to be pushed around in my school bus. Then one day, I started showing a magic trick to others. Next day another one. Puzzles, teasers, et all followed everyday and boy, did I become wanted. My strength (analytical skills) became stronger, my self-esteem grew. Bullying stopped, my self-esteem grew.
 
-The other self-esteem breaker is comparisons: "He is the captain of the cricket team, I am nobody". Build in your child that we are all unique. Just as "A" will be the first choice if we are making a cricket team, "B" will be the first choice if we are doing a drama, "C" for writing a story and "D" for painting. There is a unique spark in each one of us and hence it is unfair to compare. Often criticism from peers becomes self-criticism. Keep a sharp ear for self-criticism and quash it then and there. Your silence may be taken as acceptance. Also, let them accept criticism of actions, but not of their capability. Obviously, keep communicating, listening and supporting. And tell them that each one of us is like a hot air balloon: we may be of different shape, size, color etc.,but it is WHAT IS INSIDE US that takes us UP IN LIFE!
+The other self-esteem breaker is comparisons: "He is the captain of the cricket team, I am nobody". Build in your child that we are all unique. Just as "A" will be the first choice if we are making a cricket team, "B" will be the first choice if we are doing a drama, "C" for writing a story and "D" for painting. There is a unique spark in each one of us and hence it is unfair to compare. Often criticism from peers becomes self-criticism. So its a good idea to listen to their thoughts about criticism and get them to reflect upon each one of them.
 
- 
+Also, let them accept criticism of actions, but not of their capability. Obviously, keep communicating, listening and supporting. And tell them that each one of us is like a hot air balloon: we may be of different shape, size, color etc., but it is WHAT IS INSIDE US that takes us UP IN LIFE!
