--- a/_posts/2013-08-01-peers.md
+++ b/_posts/2013-08-01-peers.md
@@ -36,12 +36,12 @@ influence on their self-esteem comes from their friends and peers.
 As they grow, children become increasingly sensitive to the evaluations of their peers. Furthermore, as children interact with their peers or learn to function in school or some other place, they may feel accepted and liked one moment and feel different the next. Also they may begin to evaluate themselves differently from the way they were taught at home. They even start questioning the values once held sacrosanct at home.
 
 Let’s see what we can do to ease this peer pressure vis-à-vis self-esteem: 
-Accept their friends - even encourage them. Just as with our children, let’s avoid judging the company they keep. By dictating which company to keep and which to avoid, we are questioning our child's judgment. Wouldn't it be better if we educate them to discern good from bad themselves? Even if we have to, let’s point only the actions of the other child 
-that are unacceptable, not label them as good or bad.
+Accept their friends - even encourage them. Just as with our children, let’s avoid judging the company they keep. By dictating which company to keep and which to avoid, we are questioning our child's judgment. Wouldn't it be better if we educate them to discern good from bad themselves? Even if we have to, let’s point only the actions of the other child that are unacceptable, not label them as good or bad.
 
 Children are quite vulnerable to teasing, bullying, etc., by peers.
+While this is a test of self-esteem built at home, the pressure can sometimes start eroding it. Avoid panic, protecting and pulling your child out of it. Instead, first make her understand why others might be doing so and let the child work out a strategy to cope up with it. Let the child base this strategy on his or her strengths. 
 
-While this is a test of self-esteem built at home, this pressure can sometimes start eroding it. Avoid panic, protecting and pulling your child out of it. Instead, first make her understand why others might be doing so and together work out a strategy to cope up with it. Base this strategy on your child's strengths. I used to be pushed around in my school bus. Then one day, I started showing a magic trick to others. Next day another one. Puzzles, teasers, et all followed everyday and boy, did I become wanted. My strength (analytical skills) became stronger, my self-esteem grew. Bullying stopped, my self-esteem grew.
+As a kid, I used to be pushed around in my school bus. Then one day, I started showing a magic trick to others. Next day another one. Puzzles, teasers, et all followed everyday and boy, did I become wanted. My strength (analytical skills) became stronger, my self-esteem grew. Bullying stopped, my self-esteem grew.
 
 The other self-esteem breaker is comparisons: "He is the captain of the cricket team, I am nobody". Build in your child that we are all unique. Just as "A" will be the first choice if we are making a cricket team, "B" will be the first choice if we are doing a drama, "C" for writing a story and "D" for painting. There is a unique spark in each one of us and hence it is unfair to compare. Often criticism from peers becomes self-criticism. So its a good idea to listen to their thoughts about criticism and get them to reflect upon each one of them.
 
