--- a/_posts/2013-08-10-empathy.md
+++ b/_posts/2013-08-10-empathy.md
@@ -3,6 +3,7 @@ layout: chapter
 title: Empathy
 permalink: empathy
 category: feelings
+published: true
 ---
 
 There was an old woman in China who had supported the meditation of a monk for over ten years by building a little hut for him and feeding him while he was meditating. Finally to test his progress, she asked a young voluptuous girl to go and embrace the monk. The girl called upon the monk and without much ado caressed him. The monk immediately ordered the girl to get away saying he had nothing for her. The girl returned and narrated this to the old woman. "I fed that fellow for ten years!" exclaimed the old woman in anger. "He showed no consideration for your need, no disposition to explain your condition. He need not have responded to passion, but at least he could have shown some compassion." She at once went to the hut of the monk and burnt it down.
@@ -15,7 +16,7 @@ Let’s say the child is constantly rocking his chair and making some weird gurg
 
 I have often heard this remark from parents: “But he has been irritating me since morning”. There are three thoughts to ponder on:
 
-Firstly, did at any point of time (especially in the beginning of the behavior) we try to understand the child’s feelings? Did we empathize first? Carl Rogers (the famous clinical psychologist) talks about genuineness as a precondition to all empathy. Unless I really FEEL for my child (“is getting bored” or “wants an outlet for his physical energy”, “needs to play with something”, “wants to do something else” etc), I cannot empathize. A quick way to do that is to close your eyes, imagine you are a little child similar to your child, in similar situation, with similar feelings, similar desires and similar constraints. This little visualization will change your approach from being “out-of-parent” to “out-of-child”. It would be much easier to empathize.
+Firstly, did at any point of time (especially in the beginning of the behavior) we try to understand the child’s feelings? Did we empathize first? Carl Rogers (the famous clinical psychologist) talks about genuineness as a precondition to all empathy. Unless I really FEEL for my child (“is getting bored” or “wants an outlet for his physical energy”, “needs to play with something”, “wants to do something else” etc), I cannot empathize. A quick way to do that is to close your eyes, imagine you are a little child similar to your child, in similar situation, with similar feelings, similar desires and similar constraints. This little visualization will change your perpective from being out-of-parent to being out-of-the-child. It would be much easier to empathize.
 
 Secondly, what if we assume that the child has a need that this (behavior) is fulfilling? The trick is not to try and find this need because then we will end up asking “why are you doing this” – a line of questioning which usually leads to fruitless reasoning or justification. Rather the strategy is just to empathize with the child that "there is a need and that we accept the need." Only we may want the child to try and find an alternative way of fulfilling the need - just like the monk could have asked the girl to go to an eligible bachelor!
 
