--- a/_posts/2013-08-10-grow.md
+++ b/_posts/2013-08-10-grow.md
@@ -3,6 +3,7 @@ layout: chapter
 title: Letting Grow
 permalink: grow
 category: parent
+published: true
 ---
 
 A mother thought that she had a very disobedient and naughty child. She used to shut the child in a storeroom when the situation went out of hand. One day, as she was taking her child to shut him in the store, a realization dawned on her. Instead of shoving him inside the store, she entered with him inside the store and said, "Son, I have a huge apology to make. It is my fault that you are so disobedient. You were not born this way. This is the way I have brought you up to be. Please forgive me. I am going to try to be a better mother for you. As part of the promise, I will stay in the store with you today".
@@ -27,4 +28,4 @@ However, if you need, here is a guide on how to do it:
 
 Perhaps one should look at these strategies not as substitutes of each other, but working in tandem. Remember if you expect your child to be disobedient, so he will be; if you expect your child to be responsible so he will be. For maximum effect, remember what Gandhiji said, "You must be the change you wish to see in the world".
 
-But there is one more strategy that one should consider, if at all I can call it a strategy - I should call it a way of life, a pradigm .. to read click here.
+But there is one more strategy that one should consider, if at all I can call it a strategy - I should call it a way of life, a pradigm .. read the essay letting succeed.
