--- a/_posts/2013-08-10-gandhi.md
+++ b/_posts/2013-08-10-gandhi.md
@@ -1,8 +1,9 @@
 ---
 layout: chapter
-title: The Myth of Gandhiji's 3-Monkeys
+title: "The Myth of Gandhiji's 3-Monkeys"
 permalink: gandhi
 category: myth
+published: true
 ---
 
 Two monks came across a swollen river that they had to cross. A young damsel, who had hurt herself, was waiting for some help to cross the same river. The elder monk carried her on his back, crossed the river, and dropped her off at the other bank. As the two monks continued their journey, the younger one's mind was at unrest. "How could my senior do such a blasphemous act - touch a girl!". After a long time, when the young monk could not contain himself any further, he finally asked the senior monk, "You touched that girl, how could you break our sacred vow?" The elder monk remarked quietly, "I left that girl at the river, you are still carrying her!"
@@ -14,6 +15,7 @@ Somebody uses foul language;
 Some children of your child's age are bullying a smaller child;
 An indecently exposed photograph is there in the magazine;
 You speak angrily and rudely to another person.
+
 While I am not suggesting that we expose our children to inappropriate stuff, I want you to realize that the trouble with building a shield around a child is that sooner or later the child invariably does get exposed. Then what? The trouble is that children cannot help but "see and hear evil".
 
 The problem is not what Gandhiji propagated (he was a master communicator and had to simplify things for the masses). The trouble is in our literal interpretation of the same.
@@ -22,6 +24,6 @@ We are what our thoughts are. Hence, a much better proposition, as the senior mo
 
 Somehow we believe that it is parents' responsibility to preach, sermonize and moralize our children minds. We believe that if we do not brain wash then somebody or something else would do that. But to us, the key to the whole process of character building is not education, but EMPOWERMENT.
 
-While I am not going to give solutions here, I leave you to ponder over this with profound words of Osho Shree Rajneesh,
+I leave you to ponder over this with profound words of Osho Shree Rajneesh,
 
 "I say over and over again that if you want your children to know the truth you must give them the chance to think creatively. Stop conditioning them with beliefs; allow them to understand things for themselves. Creativity will become their capacity for life; creativity will become their wisdom. That capacity and that wisdom will lead them to the uncharted sea of truth"
