--- a/_posts/2013-08-10-succeed.md
+++ b/_posts/2013-08-10-succeed.md
@@ -3,9 +3,8 @@ layout: chapter
 title: Letting Succeed
 permalink: succeed
 category: parent
+published: true
 ---
-
-This article is a sequel to the article "Letting Grow". It is advisable to go through the previous article before you read this one to get the most out of this one.
 
 On Nov 18th, 1995, Itzhak Perlman, the violinist, came on stage to give a concert at Lincoln Center in New York City. If you have ever been to a Perlman concert, you know that getting on stage is no small achievement for him. He was stricken with polio as a child, and so he has braces on both legs and walks with the aid of two crutches. To see him walk across the stage one step at a time, painfully and slowly, is an awesome sight. After he walks painfully, yet majestically, to his chair, he sits down, slowly, puts his crutches on the floor, undoes the clasps on his legs, tucks one foot back and extends the other foot forward.
 
@@ -19,7 +18,7 @@ Perlman also redefined disability – is it about not having an ability? Or is i
 
 Tell me, if you want to select a team for a high jump competition, would you train someone who can jump three feet or train three who can jump one feet each? Then why is it as parents we constantly harp on correcting the child’s weaknesses? Isn’t this very logical – we can only succeed on our strengths. The people who succeeded didn’t do that because they were nurturing their weaknesses – they almost ignored their weaknesses and nurtured their strengths.
 
-If your child gets his report card and it reads English 95, Mathematics 65 – what will you work on – will you send him for a coaching class in English so that he becomes a great writer or would you tutor him in maths so that he becomes an average somebody. Too many parents come to GenieKids asking for "developing" the child’s "weak" areas. Tell me what he is and I will make him more of that! It’s not about ironing out the wrinkles; it’s about forming peaks, success peaks.
+If your child gets his report card and it reads English 95, Mathematics 65 – what will you work on – will you send him for a coaching class in English so that he becomes a great writer or would you tutor him in maths so that he becomes an average somebody. Too many parents come to us asking for "developing" the child’s "weak" areas. Tell me what he is and I will make him more of that! It’s not about ironing out the wrinkles; it’s about forming peaks, success peaks.
 
 What if I were to define raising successful children as the task of finding out, and then nurturing the natural talent your child is born with. What a society it would be if each child started pursuing his strengths. I am not trying to say that one should leave everything else. I am not trying to say that we should ignore weaknesses. I am trying to say that we should focus, and stay focused on strengths. I am trying to say that our strengths are where we should be spending maximum time, energy and effort. I am trying to say that if you are Perlman you should just play violin!
 
