--- a/_posts/2013-08-10-grow.md
+++ b/_posts/2013-08-10-grow.md
@@ -28,4 +28,4 @@ However, if you need, here is a guide on how to do it:
 
 Perhaps one should look at these strategies not as substitutes of each other, but working in tandem. Remember if you expect your child to be disobedient, so he will be; if you expect your child to be responsible so he will be. For maximum effect, remember what Gandhiji said, "You must be the change you wish to see in the world".
 
-But there is one more strategy that one should consider, if at all I can call it a strategy - I should call it a way of life, a pradigm .. read the essay letting succeed.
+But there is one more strategy that one should consider, if at all I can call it a strategy - I should call it a way of life, a pradigm .. read the essay *Letting Succeed*.
