--- a/_posts/2013-08-01-bholu2.md
+++ b/_posts/2013-08-01-bholu2.md
@@ -25,10 +25,11 @@ Uncle Bade clarified, "Somehow we tend to get locked up in two things - first, o
 
 ”But we do need to be somebody, don't we, to be able to operate well in life, to be able to achieve?”, piped in mummy bear.
 
-"Let me give an example," replied Uncle Bade, "If Bholu and both of you, think that he is very good in Math, and if by chance he gets less marks in a test - then Bholu feels disappointed. He may then work harder or he could resort to other means to somehow score better, or he may tell you lies and so on. The reason for disappointment is not less score in the test, but that the score should
-match up to the image that Bholu carries.”
+"Let me give an example," replied Uncle Bade, "We know BHolu likes maths. 
+But both of you - his parents - think that he is very good in Math.
+Now, by chance, if he gets less marks in a test - then Bholu feels disappointed. He may then work harder or he could resort to other means to somehow score better, or he may tell you lies and so on. The reason for disappointment is not less score in the test, but that the score should match up to the image that you carry about Bholu and which you have tranferred to him.”
 
-”But what if, Bholu and both of you just think that Bholu likes and enjoys Math. Then even if he scores less, without getting disappointed, he simply wants to do the sums again or learn another way to solve them and so on.”
+”But what if, Bholu and both of you just think that one of the thing that Bholu likes doing is Math. Then even if he scores less, without getting disappointed, he may want to do the sums again or learn in another way to solve them or even skip learning them.”
 
 "Then it also doesn't matter how much my friend Chimpu gets", adds Bholu.
 
