--- a/_posts/2013-08-10-reward.md
+++ b/_posts/2013-08-10-reward.md
@@ -27,3 +27,13 @@ According to us, rewards create more problems than solutions - both for the pare
 Connecting rewards to disciplining gives control to parents. But is parenting about control? Is parenting about getting the child to do what you want? Or is it about making the child want what is good for him or her? Perhaps it’s more challenging than putting a carrot in front of the pony but more rewarding in the long run. So is disciplining about giving the leash itself to the horse?
 
 Remove rewards from the equation, and you substitute them with intrinsic motivation. This leads to self-discipline. A million times more effective!
+
+Here are few suggestions:
+
+Substitute material rewards with praise and encouragement (and keep that genuine). A smile, a hug, a public approval, a lovely label and a specific compliment works wonders.
+
+If you want to, give material rewards spontaneously. Do not explicitly connect it to the behavior. Say something harmless, like "I feel like giving this to you". The idea is that rewards should not be predictable.
+
+Eschew rewards by working on the real reason for the child to behave in a certain way. Asking them for the reasons, pointing out the consequences, giving them the choice and even control may not sound attractive in short term, but are more fundamental and permanent in their effect.
+
+After all disciplining is not about putting a carrot in front of the pony. Disciplining is about giving the leash itself to the horse. Think about it!
